test/errors/list/add_incompatible_types.np
l = [1, 2] + ["three"]
